Upgrade to Reveal.js version 18

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- Version 17 -->
+<!-- Version 18 -->
 <!doctype html>
 <html lang="sv">
 <head>
@@ -7,9 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
 
   <!-- Reveal.js -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@5.0.4/dist/reveal.css?v=17">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@5.0.4/dist/theme/white.css?v=17" id="theme">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@5.0.4/dist/print/pdf.css?v=17" media="print">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@5.0.4/dist/reveal.css?v=18">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@5.0.4/dist/theme/white.css?v=18" id="theme">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@5.0.4/dist/print/pdf.css?v=18" media="print">
 
   <!-- Font: Open Sans -->
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
@@ -45,7 +45,6 @@
     .reveal p, .reveal li{ color:var(--ink); line-height:1.5; font-size:1.02em; }
     .reveal ul, .reveal ol{ display:inline-block; text-align:left; margin:.2em auto 0; }
 
-    /* Inramad, centrerad bild i kortet */
     .img{
       display:block;
       margin:1rem auto 0;
@@ -59,21 +58,34 @@
 
     .logo{ position:fixed; right:20px; bottom:20px; width:110px; opacity:.9; z-index:40; pointer-events:none; filter:drop-shadow(0 2px 6px rgba(0,0,0,.35)); }
 
-    /* Responsivitet */
+    /* --------- Responsivitet --------- */
+    /* Små mobiler (stående) */
     @media (max-width:560px) and (orientation:portrait){
       .frame{ max-width:92vw; padding:18px 16px; }
       .reveal h1{ font-size:1.9em; }
-      .reveal h2{ font-size:1.4em; }
+      .reveal h2{ font-size:1.45em; }
       .reveal p, .reveal li{ font-size:1.02em; }
       .img{ width:92%; }
       .logo{ width:84px; }
     }
+    /* Mobiler (liggande) – krymp för att undvika scroll/beskärning */
     @media (max-width:920px) and (orientation:landscape){
-      .frame{ max-width:86vw; padding:18px 22px; }
-      .reveal h2{ font-size:1.35em; }
-      .reveal p, .reveal li{ font-size:1.0em; }
-      .img{ width:80%; }
+      .frame{ max-width:86vw; padding:16px 18px; }
+      .reveal h1{ font-size:1.8em; }
+      .reveal h2{ font-size:1.28em; }
+      .reveal h3{ font-size:1.05em; }
+      .reveal p, .reveal li{ font-size:0.96em; line-height:1.4; }
+      .title-underline{ width:96px; margin:.25em auto .8em; }
+      .img{ width:72%; }
     }
+    /* Extra låg höjd (små skärmar i landskap) */
+    @media (max-height:460px) and (orientation:landscape){
+      .frame{ padding:12px 14px; }
+      .reveal h2{ font-size:1.18em; }
+      .reveal p, .reveal li{ font-size:0.92em; }
+      .img{ width:68%; }
+    }
+    /* Större skärmar */
     @media (min-width:1200px){
       .frame{ max-width:1040px; }
       .reveal h2{ font-size:1.8em; }
@@ -87,7 +99,7 @@
   <div class="slides">
 
     <!-- Start -->
-    <section data-background="norrsken.jpg?v=17" data-background-size="cover" data-background-opacity="0.45" class="on-image">
+    <section data-background="norrsken.jpg?v=18" data-background-size="cover" data-background-opacity="0.45" class="on-image">
       <div class="frame" style="background:rgba(255,255,255,.85);">
         <h1>LIA-redovisning</h1>
         <div class="title-underline" style="background:rgba(255,255,255,.55)"></div>
@@ -116,7 +128,7 @@
       </div>
     </section>
 
-    <!-- Företaget (citat borttaget, bild centrerad) -->
+    <!-- Företaget -->
     <section>
       <div class="frame">
         <h2>1. Företaget</h2>
@@ -124,7 +136,7 @@
         <p><b>Unforgettable Nordic</b></p>
         <p>Handledare: Silvia (grundare)</p>
         <p>Arbetade tillsammans med min kurskamrat April</p>
-        <img src="adventure.jpg?v=17" alt="Unforgettable Nordic" class="img">
+        <img src="adventure.jpg?v=18" alt="Unforgettable Nordic" class="img">
       </div>
     </section>
 
@@ -232,7 +244,7 @@
     </section>
 
     <!-- Avslut – fjorden som hel bakgrund -->
-    <section data-background="sognefjord.jpg?v=17" data-background-size="cover" data-background-opacity="0.5" class="on-image">
+    <section data-background="sognefjord.jpg?v=18" data-background-size="cover" data-background-opacity="0.5" class="on-image">
       <div class="frame" style="background:rgba(255,255,255,.85);">
         <h2 style="color:#1e3a78;">Tack för mig!</h2>
         <div class="title-underline"></div>
@@ -243,15 +255,16 @@
   </div>
 </div>
 
-<img src="logo.png?v=17" class="logo" alt="Logo">
+<img src="logo.png?v=18" class="logo" alt="Logo">
 
-<script src="https://cdn.jsdelivr.net/npm/reveal.js@5.0.4/dist/reveal.js?v=17"></script>
+<script src="https://cdn.jsdelivr.net/npm/reveal.js@5.0.4/dist/reveal.js?v=18"></script>
 <script>
   Reveal.initialize({
     hash: true,
     controls: true,
     progress: true,
     touch: true,
+    /* Stabil scaling på alla enheter */
     width: 1280,
     height: 720,
     margin: 0.04,
@@ -262,4 +275,4 @@
   });
 </script>
 </body>
-                               </html>
+                                </html>
